--- a/idk.css
+++ b/idk.css
@@ -1,40 +1,51 @@
+
+
+
+
+
+/*
+weird stuff
+*/
 @font-face {
     font-family: helvetica-thin;
     src: url('./assets/helvetica_neue_thin.ttf');
-}
-@font-face {
-  font-family: 'Suravaram';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Suravaram'), url(https://fonts.gstatic.com/s/suravaram/v5/_gP61R_usiY7SCym4xIwkGS0YPx7oANy.woff2) format('woff2');
-  unicode-range: U+0951-0952, U+0964-0965, U+0C00-0C7F, U+1CDA, U+200C-200D, U+25CC;
-}
-/* latin */
-@font-face {
-  font-family: 'Suravaram';
-  font-style: normal;
-  font-weight: 400;
-  src: local('Suravaram'), url(https://fonts.gstatic.com/s/suravaram/v5/_gP61R_usiY7SCym4xIwjGS0YPx7oA.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* Eczar */
 @font-face {
     font-family: Eczar;
     src: url('./assets/Eczar/Eczar-Regular.ttf');
 }
+/* latin-ext */
+@font-face {
+  font-family: "Abril Fatface";
+  font-style: normal;
+  font-weight: 400;
+  src: local('Abril Fatface'), local('AbrilFatface-Regular'), url(https://fonts.gstatic.com/s/abrilfatface/v10/zOL64pLDlL1D99S8g8PtiKchq-lmjcDidBeT5g.woff2) format('woff2');
+  unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
+}
+/* latin */
+@font-face {
+  font-family: 'Abril Fatface';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Abril Fatface'), local('AbrilFatface-Regular'), url(https://fonts.gstatic.com/s/abrilfatface/v10/zOL64pLDlL1D99S8g8PtiKchq-dmjcDidBc.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
 
-
-html{background-color:white;color:black;font-family: 'helvetica-thin'; font-size: 16px; height: 100%;}
+html{background-color:white;color:black;font-family: 'helvetica-thin', serif; font-size: 16px; height: 100%;}
 html{line-height:130%;margin:0px;padding:0px}
 body{padding:0px 0px 0px 0px;margin:0px 0px 0px 0px;
 	background-color: lightgrey;
 	height: 100%;
-}
+	}
 
 a {color: inherit;}
+section{display: inline-block; width: 30%; float: left}
 p.no-indent{text-indent: 0px;}
 p{padding:0px;margin:0px 20px 0px 0px}
-ul {list-style-type: none;}
+.footnotes p{text-indent: 2px}
+h1,h2,h3,lh{text-transform:uppercase;}
+
 h1 {
 	font-size:50px;
     font: 'Abril Fatface', serif;
@@ -43,49 +54,44 @@ h2{font-size:18px;}
 h3{font-size:16px;}
 h4{font-size: 14px;}
 
+.center{text-align: center}
+
 h1 a,h2 a,h3 a{text-decoration:none}
 img{border:none;display:block;margin:6px auto 30px auto; width: 75%}
 
 /* Start kudos specific css */
-
-/* navbar */
-.navbar li{
-	float: left;
+li {
+	display: inline;
+	margin: 0px 20px 0px 20px;
 }
-.navbar li.right{
-	float: right;
-}
-.navbar li a{
-	display: block;
-	text-align: center;
-	padding: 20px 20px;
-}
-.navbar li a:hover:not(.current){
-	background-color: #013a80;
-}
-.navbar li a.current{
-	background-color: #090090;
-}
-.navbar ul {
+ul {
 	list-style-type: none;
+	display: inline;
 	margin: 0;
-	padding: 0 50px 0 0;
+	padding: 0;
 }
 div.navbar {
-	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
 	color: white;
 	background-color: #013a96;
+	width: 100%;
 	min-height: 60px;
 	z-index: 100;
 	position: fixed;
 	top: 0;
-	overflow: hidden;
 }
 
-/* end navbar */
 
-
-
+@media only screen and (max-width: 600px) {
+	div.navbar {
+		position: relative;
+		height: auto;
+		flex-direction: column;
+	}
+	ul
+}
 h3 h4 h5 {
 	display: inline;
 	width: inherit;
@@ -101,11 +107,15 @@ div.page {
 	background-image: url("images/bg-horses-small.jpg");
 }
 div.splash {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;	
+	background-blend-mode: darken;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+}
+div.title {
 	color: #efefed;
 	text-align: center;
+	flex-grow: 0;
 	margin-top: 50px;
 	padding: 20px;
 }
@@ -119,11 +129,11 @@ div.enroll {
 a.login {
 	margin: 0px 40px 0px 40px;
 	padding: 5px 30px 5px 30px;
-	background-color: #013a96;
+	background-color: navy;
 	display: inline-block;
 }
 a.login:hover{
-	background-color: #013a80;
+	background-color: darkblue;
 }
 ul.footer {
 	height: 30px;
@@ -133,7 +143,7 @@ ul.footer {
 	margin-right: 50px;
 }
 ul.footer>li {
-	padding: 5px;
+	padding: 5px 5px 5px 5px;
 }
 div.form {
 	text-align: right;
@@ -153,4 +163,3 @@ table.graph {
 	border-collapse: collapse;
 	background-color: lightgrey;
 }
-
